# Galculator

./: Galculator.cabal  README.md  Setup.lhs  TODO
src/: Galculator.hs
src/Control/: GalcError.hs  MonadOr.hs  MonadPosition.hs
src/Control/Monad/: Fresh.hs
src/Data/: Env.hs  Equal.hs  Existential.hs  Stream.hs
src/Galculator/: Evaluate.hs  Interpreter.hs  Proof.hs  Rule.hs  RunCommand.hs  State.hs  StepEval.hs
src/Galculator/Engine/: GcToLaw.hs  LawToRule.hs
src/Language/Combinator/: Parser.hs  Syntax.hs
src/Language/Command/: Parser.hs  Syntax.hs
src/Language/Derivation/: Parser.hs  Syntax.hs
src/Language/Law/: Parser.hs  Refresh.hs  Syntax.hs  SyntaxADT.hs  TypeInference.hs  Verify.hs
src/Language/Module/: Parser.hs  Refresh.hs  Syntax.hs  SyntaxADT.hs  TypeInference.hs  Verify.hs
src/Language/R/: Constraint.hs  Equality.hs  Match.hs  Parser.hs  Pretty.hs  Refresh.hs  Rewrite.hs  SafeCast.hs  Spine.hs  Syntax.hs  Syntax.hs-boot  SyntaxADT.hs  TypeInference.hs  Verify.hs
src/Language/Step/: Parser.hs  Syntax.hs
src/Language/Type/: Constraint.hs  Equality.hs  Parser.hs  Pretty.hs  Rewrite.hs  Syntax.hs  Syntax.hs-boot  Unification.hs  Utils.hs
